# HyperReach-Local

./: .env  README.md  main.py  pyproject.toml  setup.bat  setup.sh
backend/: __init__.py  api.py  config.py  database.py  dummy_profiles.py  llm_handler.py  message_generator.py  models.py  profile_analyzer.py
frontend/: chat.html  index.html  style.css
frontend/assets/: chat.js  script.js
