[project]
name = "cold-outreach-engine"
version = "1.0.0"
description = "Offline LLM-Powered Hyper-Personalized Cold Outreach Engine using "
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Outreach Engine Team", email = "team@outreach.local"}
]
keywords = ["llm", "bitnet", "cold-outreach", "personalization", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "transformers==4.36.2",
    "torch==2.1.1",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "SQLAlchemy==2.0.23",
    "pydantic-extra-types==2.3.0",
    "httpx==0.25.2",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "psutil==5.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
